<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="@dimen/layout_padding"

    android:background="@color/colorPrimary"

    tools:context=".OperatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="bottom"
            android:paddingBottom="@dimen/padding_edts">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edtA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/edtA_hint"
                android:editable="false"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_gravity="top"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edtB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtB_hint"
                android:editable="false"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strChoose"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/margin_btns"/>

        <Button
            android:id="@+id/btnSubt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSubt"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/margin_btns"/>

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMult"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/margin_btns"/>

        <Button
            android:id="@+id/btnDivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDivi"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/margin_btns"/>


    </LinearLayout>

</LinearLayout>